<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"

    tools:context="com.kronistas.marvelcharacters.activities.AboutMeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/me"
            app:civ_border_width="7dp"
            app:civ_border_color="@color/colorPrimaryDarkRed"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:gravity="center"
                android:textColor="@color/primaryLight"
                android:textSize="25sp"
                customfont:fontName="Montserrat-Bold.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer1"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="center"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:gravity="center"
                android:textColor="@color/primaryLight"
                android:textSize="25sp"
                customfont:fontName="Montserrat-Bold.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer2"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="center"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:gravity="center"
                android:textColor="@color/primaryLight"
                android:textSize="25sp"
                customfont:fontName="Montserrat-Bold.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer3"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="center"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:lineSpacingExtra="12dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:gravity="center"
                android:textColor="@color/primaryLight"
                android:textSize="25sp"
                customfont:fontName="Montserrat-Bold.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coment1"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coment2"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coment3"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coment4"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coment5"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>

            <com.kronistas.marvelcharacters.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coment6"
                android:lineSpacingExtra="11dp"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryLight"
                android:textSize="17sp"
                customfont:fontName="Montserrat-Light.otf"/>


        </LinearLayout>


    </ScrollView>





</LinearLayout>
