<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customfont="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.HomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/marvel_logo"/>

        <com.kronistas.marvelcharacters.views.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="11dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            customfont:fontName="Montserrat-Bold.otf"
            android:textColor="@color/colorPrimary"
            android:text="@string/welcome"/>

        <com.kronistas.marvelcharacters.views.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="11dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            customfont:fontName="Montserrat-Bold.otf"
            android:textColor="@color/colorPrimary"
            android:text="@string/welcome2"/>
        <com.kronistas.marvelcharacters.views.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="11dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            customfont:fontName="Montserrat-Bold.otf"
            android:textColor="@color/colorPrimary"
            android:text="@string/welcome3"/>


    </LinearLayout>



</RelativeLayout>
